// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border props 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content"></div>
</div>
`;

exports[`change tabs data 1`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="win-tabs win-tabs--card">
  <div class="win-tabs__wrap">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--card" style="border-color: blue;">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active" style="border-color: blue; background-color: blue;"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab" style="border-color: blue; color: blue;"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled" style="border-color: blue;"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab win-tab--active" aria-selected="true"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`dot prop 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text-wrapper"><span class="win-tab__text win-tab__text--ellipsis"></span>
        <div class="win-info win-info--dot"></div>
        </span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
  </div>
</div>
`;

exports[`info prop 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text-wrapper"><span class="win-tab__text win-tab__text--ellipsis"></span>
        <div class="win-info">10</div>
        </span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
  </div>
</div>
`;

exports[`lazy render 1`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`lazy render 2`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="background-color: rgb(238, 10, 36); width: 2px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">Text</div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render nav-left & nav-right slot 1`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line" style="border-color: #ee0a24;">Nav Left<div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="background-color: rgb(238, 10, 36);"></div>Nav Right
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`rendered event 1`] = `<div role="tabpanel" class="win-tab__pane" style="">Text</div>`;

exports[`scrollspy 1`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
          <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane">Text</div>
  </div>
</div>
`;

exports[`scrollspy 2`] = `
<div class="win-tabs win-tabs--line">
  <div>
    <div class="win-sticky">
      <div class="win-tabs__wrap win-hairline--top-bottom">
        <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="win-tab win-tab--active" aria-selected="true"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
          <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane">Text</div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="win-tab win-tab--disabled"><span class="win-tab__text win-tab__text--ellipsis">title3</span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="">Text</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
